Fix unused parameter warnings if inspector is disabled https://bugs.webkit.org/show_bug.cgi?id=134244

Patch by Eva Balazsfalvi <evab.u-szeged@partner.samsung.com> on 2014-06-24
Reviewed by Zalan Bujtas.

Source/WebCore:
No new tests, no behavior change.

* inspector/InspectorConsoleInstrumentation.h:
(WebCore::InspectorInstrumentation::startProfiling):
(WebCore::InspectorInstrumentation::stopProfiling):
* inspector/InspectorInstrumentation.h:
(WebCore::InspectorInstrumentation::didFinishXHRLoading):
* loader/cache/CachedResourceLoader.cpp:
(WebCore::CachedResourceLoader::shouldContinueAfterNotifyingLoadedFromMemoryCache):

Source/WebKit2:
* WebProcess/InjectedBundle/API/c/WKBundleInspector.cpp:
(WKBundleInspectorShow):
(WKBundleInspectorClose):
(WKBundleInspectorEvaluateScriptForTest):
(WKBundleInspectorSetPageProfilingEnabled):

Canonical link: https://commits.webkit.org/152222@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@170364 268f45cc-cd09-0410-ab3c-d52691b4dbfc