Source/WebKit2/WebProcess/InjectedBundle/API/c/WKBundleInspector.cpp
@@ -46,6 +46,8 @@ void WKBundleInspectorShow(WKBundleInspectorRef inspectorRef)
 {
 #if ENABLE(INSPECTOR)
     toImpl(inspectorRef)->show();
+#else
+    UNUSED_PARAM(inspectorRef);
 #endif
 }
 
@@ -53,6 +55,8 @@ void WKBundleInspectorClose(WKBundleInspectorRef inspectorRef)
 {
 #if ENABLE(INSPECTOR)
     toImpl(inspectorRef)->close();
+#else
+    UNUSED_PARAM(inspectorRef);
 #endif
 }
 
@@ -60,6 +64,9 @@ void WKBundleInspectorEvaluateScriptForTest(WKBundleInspectorRef inspectorRef, W
 {
 #if ENABLE(INSPECTOR)
     toImpl(inspectorRef)->evaluateScriptForTest(toWTFString(script));
+#else
+    UNUSED_PARAM(script);
+    UNUSED_PARAM(inspectorRef);
 #endif
 }
 
@@ -70,5 +77,8 @@ void WKBundleInspectorSetPageProfilingEnabled(WKBundleInspectorRef inspectorRef,
         toImpl(inspectorRef)->startPageProfiling();
     else
         toImpl(inspectorRef)->stopPageProfiling();
+#else
+    UNUSED_PARAM(enabled);
+    UNUSED_PARAM(inspectorRef);
 #endif
 }
